--- a/internal/services/auth/configs/config.local.yaml
+++ b/internal/services/auth/configs/config.local.yaml
@@ -3,15 +3,22 @@ logging:
 
 engines:
   storage:
-    url: "postgres://user:password@localhost:5432/authdb" # URL подключения к базе данных PostgreSQL
+    url: "postgresql://hexarch:5051170Qwe@localhost:5432/go_chat" # URL подключения к базе данных PostgreSQL
     max_open_conns: 10        # Максимальное количество открытых соединений
     max_idle_conns: 5         # Максимальное количество простаивающих соединений
     conn_max_lifetime: "1h"   # Максимальное время жизни соединения
 
+  vault:
+    address: "http://127.0.0.1:8200"        # Адрес Vault сервера
+    token: "hvs.JvCOaSeZjjiGBZUq30yC2usi"   # Токен доступа к Vault
+    path: "secret/auth"                     # Путь к секретам в Vault
+    timeout: "5m"                           # Таймаут подключения к Vault
+
+
 auth:
   jwt:
-    access_secret: ""     # Секретный ключ для создания Access-токенов
-    refresh_secret: ""    # Секретный ключ для создания Refresh-токенов
+    access_secret: "secret"     # Секретный ключ для создания Access-токенов
+    refresh_secret: "secret"    # Секретный ключ для создания Refresh-токенов
     access_expiry_hours: 1                      # Время жизни Access-токена в часах
     refresh_expiry_hours: 168                   # Время жизни Refresh-токена в часах (24*7)
 
@@ -19,11 +26,7 @@ handlers:
   http:
     read_timeout: "10s"     # Таймаут чтения HTTP-запросов
     write_timeout: "10s"    # Таймаут записи HTTP-ответов
-    address: "localhost"    # Адрес для прослушивания входящих запросов
+    address: "127.0.0.1"    # Адрес для прослушивания входящих запросов
     port: "8080"            # Порт для прослушивания входящих запросов
 
-vault:
-  address: "http://127.0.0.1:8200"   # Адрес Vault сервера
-  token: "example-vault-token"       # Токен доступа к Vault
-  path: "secret/data/auth"           # Путь к секретам в Vault
-  timeout: "5m"                      # Таймаут подключения к Vault
+graceful_shutdown: 30s
