--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
 .DS_Store
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+vendor/
+go.work
+bin/
+.vscode/
+.idea/
+*.log
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+.env
