--- a/internal/services/website/configs/config.prod.yaml
+++ b/internal/services/website/configs/config.prod.yaml
@@ -15,13 +15,13 @@ vault:
   timeout: "5m"
 
 auth_service:
-  address: "http://auth-service:9090"  
+  address: "auth-service:9090"  
   jwt_secret: ""  
 
 handlers:
   http:
-    read_timeout: "10s"
-    write_timeout: "10s"
+    read_timeout: "100s"
+    write_timeout: "100s"
     address: "0.0.0.0"
     port: "8081"
   grpc:
