--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,8 +6,37 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    sendfile        on;
-    keepalive_timeout  65;
+    # Основные оптимизации
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    keepalive_requests 100;
+    reset_timedout_connection on;
+    client_body_timeout 60s;
+    send_timeout 60s;
+    client_header_timeout 60s;
+    
+    # Буферы
+    client_body_buffer_size 128k;
+    client_max_body_size 10m;
+    client_header_buffer_size 1k;
+    large_client_header_buffers 4 4k;
+    output_buffers 1 32k;
+    postpone_output 1460;
+    
+    # Настройка кэширования
+    open_file_cache max=200000 inactive=20s;
+    open_file_cache_valid 30s;
+    open_file_cache_min_uses 2;
+    open_file_cache_errors on;
+
+    # Сжатие
+    gzip on;
+    gzip_min_length 1000;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
+
 
     # Настройка WebSocket
     map $http_upgrade $connection_upgrade {
@@ -79,6 +108,16 @@ http {
 
         # Проксирование к frontend сервису
         location / {
+            # Таймауты
+            proxy_connect_timeout 200s;
+            proxy_send_timeout 200s;
+            proxy_read_timeout 200s;            
+            # Буферы
+            proxy_buffer_size 4k;
+            proxy_buffers 4 32k;
+            proxy_busy_buffers_size 64k;
+            proxy_temp_file_write_size 64k;
+            
             proxy_pass http://frontend-service:8084;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -89,11 +128,20 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
+
+            # Дополнительные настройки
+            proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+            proxy_next_upstream_tries 3;
+            proxy_next_upstream_timeout 10s;
+
         }
 
         # API для Auth Service
         location /api/v1/auth/ {
             proxy_pass http://auth-service:8080/api/v1/auth/;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -103,6 +151,9 @@ http {
         # API для Website Service
         location /api/v1/rooms/ {
             proxy_pass http://website-service:8081/api/v1/rooms/;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -112,6 +163,10 @@ http {
         # API для Chat Service
         location /api/v1/chat/ {
             proxy_pass http://chat-service:8082/api/v1/chat/;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 500s;
+
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -126,6 +181,12 @@ http {
             alias /root/static/;
             expires 1h;
             add_header Cache-Control "public, no-transform";
+            access_log off;
+            tcp_nodelay off;
+            open_file_cache max=3000 inactive=120s;
+            open_file_cache_valid 45s;
+            open_file_cache_min_uses 2;
+            open_file_cache_errors off;
         }
     }
 }
