--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,15 +6,39 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    # Basic optimizations
+    # Основные оптимизации
     sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
     keepalive_timeout 65;
+    keepalive_requests 100;
+    reset_timedout_connection on;
+    client_body_timeout 60s;
+    send_timeout 60s;
+    client_header_timeout 60s;
+    
+    # Буферы
+    client_body_buffer_size 128k;
+    client_max_body_size 10m;
+    client_header_buffer_size 1k;
+    large_client_header_buffers 4 4k;
+    output_buffers 1 32k;
+    postpone_output 1460;
+    
+    # Настройка кэширования
+    open_file_cache max=200000 inactive=20s;
+    open_file_cache_valid 30s;
+    open_file_cache_min_uses 2;
+    open_file_cache_errors on;
 
-    # Gzip Compression
+    # Сжатие
     gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_min_length 1000;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
 
-    # WebSocket support
+
+    # Настройка WebSocket
     map $http_upgrade $connection_upgrade {
         default upgrade;
         ''      close;
@@ -22,44 +46,69 @@ http {
 
     server {
         listen 80;
+        server_name swagger.localhost;
+
+        location / {
+            proxy_pass http://swagger-ui:8080/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
+   server {
+        listen 80;
+        server_name vault.localhost;
+
+        location /v1/ {
+             proxy_pass http://vault:8200;
+        }
+
+        location /vault/ {
+            proxy_pass  http://vault:8200/;
+
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Accept-Encoding "";
+
+            proxy_redirect /ui/ /vault/ui/;
+
+            sub_filter '<head>' '<head><base href="/vault/">';
+            sub_filter '"/ui/' '"ui/';
+            sub_filter_once off;
+
+            proxy_redirect /ui/ /vault/ui/;
+        }
+    }
+
+    server {
+        listen 80;
+        server_name pgadmin.localhost;
+
+        location / {
+            proxy_pass http://pgadmin:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_redirect / /;
+            sub_filter 'href="/' 'href="/pgadmin/';
+            sub_filter 'src="/' 'src="/pgadmin/';
+            sub_filter_once off;
+            sub_filter_types text/html text/css text/javascript application/javascript;
+        }
+    }
+
+    server {
+        listen 80;
         server_name localhost;
 
-        # Static files (if any)
-        location /static/ {
-            alias /root/static/;
-            expires 1h;
-            add_header Cache-Control "public, no-transform";
-            access_log off;
-            tcp_nodelay off;
-        }
-
-        # API for Auth Service
-        location /api/v1/auth/ {
-            proxy_pass http://auth-service:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        # API for Website Service
-        location /api/v1/rooms/ {
-            proxy_pass http://website-service:8081;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        # API for Chat Service (if needed)
-        location /api/v1/chat/ {
-            proxy_pass http://chat-service:8082;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        # WebSocket connections (Chat Service)
+         # Проксирование к frontend websocket сервису 
         location /ws/ {
-            proxy_pass http://chat-service:8082;
+            proxy_pass http://frontend-service:8084;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
@@ -70,12 +119,70 @@ http {
             proxy_send_timeout 86400s;
         }
 
-        # Frontend application
+        # Проксирование к frontend сервису
         location / {
+            # Таймауты
+            proxy_connect_timeout 200s;
+            proxy_send_timeout 200s;
+            proxy_read_timeout 200s;            
+            # Буферы
+            proxy_buffer_size 4k;
+            proxy_buffers 4 32k;
+            proxy_busy_buffers_size 64k;
+            proxy_temp_file_write_size 64k;
+            
             proxy_pass http://frontend-service:8084;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Для WebSocket подключений
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+
+            # Дополнительные настройки
+            proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+            proxy_next_upstream_tries 3;
+            proxy_next_upstream_timeout 10s;
+
+        }
+
+        # API для Auth Service
+        location /api/v1/auth/ {
+            proxy_pass http://auth-service:8080/api/v1/auth/;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # API для Website Service
+        location /api/v1/rooms/ {
+            proxy_pass http://website-service:8081/api/v1/rooms/;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /static/ {
+            alias /root/static/;
+            expires 1h;
+            add_header Cache-Control "public, no-transform";
+            access_log off;
+            tcp_nodelay off;
+            open_file_cache max=3000 inactive=120s;
+            open_file_cache_valid 45s;
+            open_file_cache_min_uses 2;
+            open_file_cache_errors off;
         }
     }
 }
