--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,7 +37,6 @@ http {
     gzip_proxied expired no-cache no-store private auth;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
 
-
     # Настройка WebSocket
     map $http_upgrade $connection_upgrade {
         default upgrade;
@@ -57,7 +56,7 @@ http {
         }
     }
 
-   server {
+    server {
         listen 80;
         server_name vault.localhost;
 
@@ -67,18 +66,14 @@ http {
 
         location /vault/ {
             proxy_pass  http://vault:8200/;
-
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Accept-Encoding "";
-
             proxy_redirect /ui/ /vault/ui/;
-
             sub_filter '<head>' '<head><base href="/vault/">';
             sub_filter '"/ui/' '"ui/';
             sub_filter_once off;
-
             proxy_redirect /ui/ /vault/ui/;
         }
     }
@@ -93,7 +88,6 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-
             proxy_redirect / /;
             sub_filter 'href="/' 'href="/pgadmin/';
             sub_filter 'src="/' 'src="/pgadmin/';
@@ -106,26 +100,28 @@ http {
         listen 80;
         server_name localhost;
 
-         # Проксирование к frontend websocket сервису 
-        location /ws/ {
-            proxy_pass http://frontend-service:8084;
+        # WebSocket endpoint for chat service
+        location /ws/chat/ {
+            proxy_pass http://chat-service:8082;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_read_timeout 86400s;
-            proxy_send_timeout 86400s;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # WebSocket specific settings
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
+            proxy_send_timeout 300s;
         }
 
         # Проксирование к frontend сервису
         location / {
-            # Таймауты
             proxy_connect_timeout 200s;
             proxy_send_timeout 200s;
             proxy_read_timeout 200s;            
-            # Буферы
             proxy_buffer_size 4k;
             proxy_buffers 4 32k;
             proxy_busy_buffers_size 64k;
@@ -137,16 +133,13 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             
-            # Для WebSocket подключений
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
 
-            # Дополнительные настройки
             proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
             proxy_next_upstream_tries 3;
             proxy_next_upstream_timeout 10s;
-
         }
 
         # API для Auth Service
