--- a/internal/services/auth/configs/config.prod.yaml
+++ b/internal/services/auth/configs/config.prod.yaml
@@ -7,6 +7,8 @@ engines:
     max_open_conns: 10
     max_idle_conns: 5
     conn_max_lifetime: "1h"
+  metrics:
+    address: ":9100"
 
 vault:
   address: "http://vault:8200"
