--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,8 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
+    resolver 127.0.0.11 ipv6=off;
+
     include       mime.types;
     default_type  application/octet-stream;
 
@@ -93,6 +95,71 @@ http {
             sub_filter 'src="/' 'src="/pgadmin/';
             sub_filter_once off;
             sub_filter_types text/html text/css text/javascript application/javascript;
+        }
+    }
+
+    # Prometheus server
+    server {
+        listen 80;
+        server_name prometheus.localhost;
+
+        location / {
+            proxy_pass http://prometheus:9090/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Оптимизация для Prometheus
+            proxy_buffering on;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+            proxy_read_timeout 30s;
+        }
+    }
+
+     server {
+        listen 80;
+        server_name metrics.localhost;
+
+        location / {
+            set $upstream http://auth-service:9100;
+            proxy_pass $upstream/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_read_timeout 30s;
+        }
+    }
+
+    server {
+        listen 80;
+        server_name grafana.localhost;
+
+        location / {
+            set $upstream http://grafana:3000;
+            proxy_pass $upstream/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+
+            proxy_buffering on;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+            proxy_read_timeout 60s;
         }
     }
 
